<resources>
    <string name="app_name">ElCodeLab</string>
    <string name="introMessage">I am El and I am an aspiring developer</string>
    <string name="theGirl">the girl</string>
    <string name="theCode">the code</string>
    <string name="theDesign">the design</string>
    <string name="education">education</string>
    <string name="references">references</string>
    <string name="connect">connect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="design_text">Website Design:</string>
    <string name="now_go_back">NOW GO BACK</string>
    <string name="custom_transition">CUSTOM TRANSITION</string>
    <string name="custom_transition_happening">Custom Transition Happening</string>
    <string name="imageDesc">ImageDesc</string>
    <string name="go_to_another_activity">GO TO ANOTHER ACTIVITY</string>
    <string name="go_back">NOW GO BACK</string>
    <string name="make_custom_transition">MAKE CUSTOM TRANSITION</string>
    <string name="explode">EXPLODE</string>
    <string name="fade">FADE</string>
    <string name="say_cheese">Say Cheese!</string>
    <string name="animate">Animate!</string>
    <string name="transferable_skills">TRANSFERABLE SKILLS LEARNED:</string>
    <string name="educationDisplay">Critical thinking # Time management # Reasoning # Communication # Research # Analysis # Problem-solving # Numeracy</string>
    <string name="what_I_learned">Data Structures and Algorithms / C# / Java / HTML / CSS / SQL / MongoDB / JavaScript / NodeJS / Git / Android Java / Unix / MVC / Agile / SOLID </string>
    <string name="say_cheese_btn">SAY CHEESE</string>
</resources>